# binary-function-definitionRam

./: CMakeLists.txt  DependencyAnalysisTestPass.h  MemoryAccessAnalysis.h  README.md  datadepenceytest.mlir  dependence.mlir  loopunroll.mlir  loopunrolloutput.mlir  matmul  nodependence.mlir  output.mlir  output.s  passtest.mlir  reference  reference.c  test.mlir  testdep.mlir
include/Compiler/: CMakeLists.txt
include/Compiler/Dialect/: CMakeLists.txt
include/Compiler/Dialect/nova/: Broadcast.h  CMakeLists.txt  NovaDialect.h  NovaDialect.td  NovaOps.h  NovaOps.td
include/Compiler/Transforms/: AffineFullUnroll.cpp  AffineFullUnroll.h  CMakeLists.txt  CleanupPass.h  DependencyAnalysis.h  DependencyAnalysisTestPass.h  FuseMatmulInit.h  MemoryAccessAnalysis.h  Passes.h  Passes.td
include/Compiler/Translation/: CMakeLists.txt
lib/: CMakeLists.txt
lib/Dialect/: CMakeLists.txt
lib/Dialect/nova/: Broadcast.cpp  CMakeLists.txt  NovaCanonicalizations.cpp  NovaDialect.cpp  NovaOps.cpp
lib/Transforms/: CMakeLists.txt  CleanupPass.cpp  DependencyAnalysis.cpp  DependencyAnalysisTestPass.cpp  FuseMatmulInit.cpp  MemoryAccessAnalysis.cpp
tools/: CMakeLists.txt
tools/nova-opt/: CMakeLists.txt  nova-opt.cpp
